# fair_llm_tutor

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  config.py  config_export.py  main.py  optimize_tutor.py  pyproject.toml  requirements.txt  run_eval.py
.claude/: settings.json
agents/: __init__.py  hint_generator_agent.py  manager_agent.py  misconception_detector_agent.py  safety_guard_agent.py  tutor_agent.py
course_materials/: algebra_equations.md  biology_cell.md  calculus_derivatives.md  chemistry_balancing.md  common_misconceptions.md  economics_fundamentals.md  history_overview.md  linear_algebra_matrices.md  literature_analysis.md  ml_basics.md  physics_mechanics.md  physics_momentum.md  programming_recursion.md  statistics_descriptive.md
eval/: eval_config.py  eval_harness.py  eval_judge.py  scenarios.json  scenarios.py  simulated_student.py
optimizer/: applier.py  config.py  loop.py  proposer.py  scorer.py  tracker.py
sample_homeworks/: calculus_homework.json  physics_homework.json
sessions/: REPORT.md  lesson_01_derivatives.jsonl  lesson_01_derivatives.scored.jsonl  lesson_02_recursion.jsonl  lesson_02_recursion.scored.jsonl  lesson_03_matrices.jsonl  lesson_03_matrices.scored.jsonl  lesson_04_statistics.jsonl  lesson_04_statistics.scored.jsonl  lesson_05_ml_basics.jsonl  lesson_05_ml_basics.scored.jsonl  lesson_06_algebra.jsonl  lesson_06_algebra.scored.jsonl  lesson_07_physics_momentum.jsonl  lesson_07_physics_momentum.scored.jsonl  lesson_08_history_dates.jsonl  lesson_08_history_dates.scored.jsonl  lesson_09_literature_themes.jsonl  (+23 more)
(+424 files in other folders)
